/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package armario;

/**
 *
 * @author laura
 */
public class Camiseta extends Vestimenta {
    public Camiseta(String estilo, String color) {
        super(estilo, color);
    }
    
}
